--- a/project/meu.html
+++ b/project/meu.html
@@ -86,3 +86,14 @@
 <script src="menu.js"></script>
 </body>
 </html>
+
+
+
+   <script>
+            function handleButton(){
+            window.location.href="order.html";
+            }
+            document.getElementById("button").addEventListener("click",handleButton);
+        
+        </script>
+        
